fix: Fix the style of light mode and dark mode for TOC.

--- a/src/style.css
+++ b/src/style.css
@@ -262,14 +262,6 @@
   background-color: rgba(41, 225, 176, 0.36) !important;
 }
 
-/* dark mode */
-@media (prefers-color-scheme: dark) {
-  .ks-check-icon {
-    filter: invert(1);
-    opacity: 0.7;
-  }
-}
-
 /* TOC Styles */
 #toc-container {
   position: fixed;
@@ -314,9 +306,9 @@
 }
 
 .toc-item {
-  color: rgba(255, 255, 255, 0.8);
+  color: rgba(255, 255, 255, 0.65);
   cursor: pointer;
-  padding: 0px 12px;
+  padding: 0px 8px;
   margin: 6px 0;
   border-radius: 4px;
   transition: all 0.2s ease;
@@ -332,31 +324,51 @@
 }
 
 .toc-item:hover:not(.active) {
-  background-color: rgba(255, 255, 255, 0.1);
+  background-color: rgba(255, 255, 255, 0.14);
 }
 
 .toc-item.active {
-  background-color: rgba(255, 255, 255, 0.1);
-  border-left-color: white;
+  background-color: rgba(255, 255, 255, 0.14);
   color: white;
 }
 
 .indicator-point {
   width: 5px;
   height: 5px;
-  background: rgba(255, 255, 255, 0.4);
+  background: rgba(0, 0, 0, 0.4);
   border-radius: 50%;
-  margin: 4px -1px;
+  margin: 5px -1px;
   transition: all 0.2s ease;
   cursor: pointer;
 }
 
 .indicator-point:hover:not(.active) {
-  background: rgba(255, 255, 255, 0.7);
+  background: rgba(0, 0, 0, 0.8);
   transform: scale(1.4);
 }
 
 .indicator-point.active {
-  background: rgba(255, 255, 255, 0.7);
+  background: rgba(0, 0, 0, 0.8);
   transform: scale(1.3);
+}
+
+/* dark mode */
+@media (prefers-color-scheme: dark) {
+  .ks-check-icon {
+    filter: invert(1);
+    opacity: 0.7;
+  }
+
+  .indicator-point {
+    background: rgba(255, 255, 255, 0.4);
+  }
+
+  .indicator-point:hover:not(.active) {
+    background: rgba(255, 255, 255, 0.8);
+  }
+
+  .indicator-point.active {
+    background: rgba(255, 255, 255, 0.8);
+  }
+    
 }
